--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Chris Shum
+email: shum.chris8@gmail.com
+url: https://chris-shum.github.io/
+description: "Personal portfolio of Chris Shum."
+skills: "Android Developer - Mechanical Engineer - Dancer"
+meta_author: Shum Chris
 
 # Google webmaster tools
 google_verify:
@@ -31,7 +31,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: Chris shum
   location: Location
   social: Around the Web
   credits: Credits
@@ -39,20 +39,20 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: https://twitter.com/chrisshowme1
+  - title: instagram
+    url: https://www.instagram.com/chrisshowme/
+  - title: linkedin
+    url: https://www.linkedin.com/in/shumchris
+  - title: generalassembly
+    url: https://profiles.generalassemb.ly/profiles/shumchris
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/chris-shum
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 
+  - line: New York, NY
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
