--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ color:
 # Footer settings
 footer:
   copyright: Chris Shum
-  location: New York
+  location: Location
   social: Around the Web
   credits: Credits
 
