--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ social:
   - title: generalassembly
     url: https://profiles.generalassemb.ly/profiles/shumchris
   - title: instagram
-    url: https://www.instagram.com/chrisshowme/
+    url: https://www.instagram.com/explore/tags/showmevsandroid/
   - title: twitter
     url: https://twitter.com/chrisshowme1
   - title: github
