--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Chris Shum, MSc.
+title: Christopher Shum, MSc.
 email: shum.chris8@gmail.com
 url: https://chris-shum.github.io/
 description: "Personal portfolio of Chris Shum."
