--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Chris Shum
+  copyright: Chris Shum, MSc.
   location: Location
   social: Around the Web
   credits: Credits
