--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: Central Jersey, NJ
+  - line: Central Jersey, ANJ
   - line: New York, NY
 
 # Credits content
